syntax = "proto2";
package openscq30;

import "equalizer_configuration.proto";

option java_package = "com.oppzippy.openscq30.lib.protobuf";
option java_multiple_files = true;

message BasicHearId {
  required bool is_enabled = 1;
  required StereoVolumeAdjustments volume_adjustments = 2;
  required int32 time = 3;
}

message CustomHearId {
  required bool is_enabled = 1;
  required StereoVolumeAdjustments volume_adjustments = 2;
  required int32 time = 3;
  required uint32 hear_id_type = 4;
  required uint32 hear_id_music_type = 5;
  optional StereoVolumeAdjustments custom_volume_adjustments = 6;
}

message HearId {
  oneof hear_id {
    BasicHearId basic = 1;
    CustomHearId custom = 2;
  }
}
